Authentication matures, one more Page object for selenium testing